--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,20 +1,16 @@
 project(neural-networks)
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 3.6)
+set(CMAKE_CXX_STANDARD 11)
 
-if (CMAKE_VERSION VERSION_LESS "3.1")
-    if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11")
-    endif ()
-else ()
-    set(CMAKE_CXX_STANDARD 11)
-endif ()
-
-# Subdirectories
+# Add Subprojects
 add_subdirectory(mathlib)
 
-# Main
-add_executable(main main.cpp)
+# Add Tests
+add_subdirectory(mathlib.tests)
 
+
+# Add Main
+add_executable(main main.cpp)
 # Link libraries
 target_link_libraries(main mathlib)
 
