Dummy layer implementation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ set(CMAKE_CXX_STANDARD 14)
 
 # Add Subprojects
 add_subdirectory(mathlib)
+add_subdirectory(NNLib)
 
 # Add Tests
 add_subdirectory(mathlib.tests)
@@ -12,9 +13,10 @@ add_subdirectory(mathlib.tests)
 # Add Main
 add_executable(main main.cpp)
 # Link libraries
-target_link_libraries(main mathlib)
+target_link_libraries(main mathlib NNLib)
 
 target_include_directories(main PUBLIC
     "${PROJECT_BINARY_DIR}"
     "${PROJECT_SOURCE_DIR}/mathlib"
+    "${PROJECT_SOURCE_DIR}/NNLib"
 )
