--- a/dataload.tests/CMakeLists.txt
+++ b/dataload.tests/CMakeLists.txt
@@ -6,9 +6,11 @@ enable_testing()
 
 # Include directory with header files of the library to be tested
 include_directories(${CMAKE_SOURCE_DIR}/dataload)
+include_directories(${CMAKE_SOURCE_DIR}/mathlib)
 
 # Link directory with library to be tested
 link_directories(${CMAKE_BINARY_DIR}/dataload)
+link_directories(${CMAKE_BINARY_DIR}/mathlib)
 
 file(GLOB_RECURSE CPP_FILES "*.cpp")
 file(GLOB_RECURSE H_FILES "*.h")
