changed ErrorFunc, made second main for actual network

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,10 +14,20 @@ add_subdirectory(dataload.tests)
 
 # Add Main
 add_executable(main main.cpp)
+add_executable(2main 2main.cpp)
 # Link libraries
 target_link_libraries(main mathlib NNLib dataload)
 
 target_include_directories(main PUBLIC
+    "${PROJECT_BINARY_DIR}"
+    "${PROJECT_SOURCE_DIR}/mathlib"
+    "${PROJECT_SOURCE_DIR}/NNLib"
+    "${PROJECT_SOURCE_DIR}/dataload"
+)
+
+target_link_libraries(2main mathlib NNLib dataload)
+
+target_include_directories(2main PUBLIC
     "${PROJECT_BINARY_DIR}"
     "${PROJECT_SOURCE_DIR}/mathlib"
     "${PROJECT_SOURCE_DIR}/NNLib"
