OpenMP working on XOR

--- a/NNLib/CMakeLists.txt
+++ b/NNLib/CMakeLists.txt
@@ -1,6 +1,9 @@
 project(NNLib)
-cmake_minimum_required(VERSION 3.8)
+cmake_minimum_required(VERSION 3.9)
 set(CMAKE_CXX_STANDARD 17)
+
+# Find multiprocessing library OpenMP
+find_package(OpenMP)
 
 include_directories(${CMAKE_SOURCE_DIR}/mathlib)
 
@@ -16,4 +19,6 @@ add_library(${PROJECT_NAME} SHARED
 
 add_dependencies(${PROJECT_NAME} mathlib)
 
-target_link_libraries(${PROJECT_NAME} mathlib)
+target_compile_options(${PROJECT_NAME} PRIVATE -Wall ${OpenMP_CXX_FLAGS})
+
+target_link_libraries(${PROJECT_NAME} mathlib ${OpenMP_CXX_FLAGS})
