--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,13 +30,15 @@ target_include_directories(main PUBLIC
 )
 
 # Add second main
-# add_executable(2main 2main.cpp)
+add_executable(2main 2main.cpp)
+# Compile options
+target_compile_options(2main PRIVATE -Wall ${OpenMP_CXX_FLAGS})
+# Link libraries
+target_link_libraries(2main mathlib NNLib dataload ${OpenMP_CXX_FLAGS})
 
-# target_link_libraries(2main mathlib NNLib dataload)
-
-# target_include_directories(2main PUBLIC
-#     "${PROJECT_BINARY_DIR}"
-#     "${PROJECT_SOURCE_DIR}/mathlib"
-#     "${PROJECT_SOURCE_DIR}/NNLib"
-#     "${PROJECT_SOURCE_DIR}/dataload"
-# )
+target_include_directories(2main PUBLIC
+    "${PROJECT_BINARY_DIR}"
+    "${PROJECT_SOURCE_DIR}/mathlib"
+    "${PROJECT_SOURCE_DIR}/NNLib"
+    "${PROJECT_SOURCE_DIR}/dataload"
+)
